# kepler

./: --request  .gitignore  Config.sample.xcconfig  README.md  Request.swift
RealityKitContent/Package.realitycomposerpro/ProjectData/: main.json
RealityKitContent/Sources/RealityKitContent/RealityKitContent.rkassets/: Scene.usda
backend/: llm.py  pyproject.toml
hackprinceton/: AppDelegate.swift  Audio.swift  CommitDetailView.swift  CommitGraph.swift  Constants.swift  ContentView.swift  ContentView_iOS.swift  ContentView_visionOS.swift  GitHubAPI.swift  Info.plist  Model.swift  Multipart.swift  OnboardView.swift  OpenAIAPI.swift  ProvisionallyNamedApp.swift  Request.swift  Scene.usda  Verbwire.swift  VisionOSAIView.swift
hackprinceton.xcodeproj/: project.pbxproj
hackprinceton.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
hackprinceton.xcodeproj/xcuserdata/joyliu.xcuserdatad/xcschemes/: xcschememanagement.plist
hackprinceton/AR/: ARViewModel.swift  BranchLabels.swift  CoachingView.swift  CommitComponent.swift  ExpansionSystem.swift  GeneralARStuff.swift
hackprinceton/Assets.xcassets/AppIcon.appiconset/: Contents.json
hackprinceton/Assets.xcassets/AppIcon.solidimagestack/Back.solidimagestacklayer/Content.imageset/: Contents.json
hackprinceton/Assets.xcassets/AppIcon.solidimagestack/Front.solidimagestacklayer/Content.imageset/: Contents.json
hackprinceton/Assets.xcassets/AppIcon.solidimagestack/Middle.solidimagestacklayer/Content.imageset/: Contents.json
hackprinceton/Assets.xcassets/icon.imageset/: Contents.json
