[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Joy Liu <joyliu.q@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
modal = "^0.62.21"
huggingface-hub = "^0.22.2"
transformer-utils = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
